fix: overflow in modal

--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,18 @@
 .text-btn:hover {
     cursor:pointer
 }
+
+::-webkit-scrollbar {
+    width: 0.5em; 
+    background-color: transparent;
+  }
+  
+
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: transparent;  
+  }
+  
